testing/stage_20/valid/return_void_ptr.c
int a=3;
void *test()
{
	a=a+1;
	return &a;
}

int main()
{
	int *ptr=test();
	return *ptr;
}