testing/stage_20/invalid/char_void.c
int main()
{
	char void a=2;
	return a;
}